// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Arrow Element applies the bottom modifier 1`] = `
.c0 {
  border-color: transparent;
  border-style: solid;
  height: 0;
  position: absolute;
  width: 0;
  border-top-width: 0.5rem;
  border-right-width: 0.5rem;
  border-bottom-width: 0;
  border-left-width: 0.5rem;
  border-top-color: #191919;
  bottom: -0.4375rem;
}

<div
  className="c0"
/>
`;

exports[`Tooltip Arrow Element applies the left modifier 1`] = `
.c0 {
  border-color: transparent;
  border-style: solid;
  height: 0;
  position: absolute;
  width: 0;
  border-top-width: 0.5rem;
  border-right-width: 0.5rem;
  border-bottom-width: 0.5rem;
  border-left-width: 0;
  border-right-color: #191919;
  left: -0.4375rem;
}

<div
  className="c0"
/>
`;

exports[`Tooltip Arrow Element applies the right modifier 1`] = `
.c0 {
  border-color: transparent;
  border-style: solid;
  height: 0;
  position: absolute;
  width: 0;
  border-top-width: 0.5rem;
  border-right-width: 0;
  border-bottom-width: 0.5rem;
  border-left-width: 0.5rem;
  border-left-color: #191919;
  right: -0.4375rem;
}

<div
  className="c0"
/>
`;

exports[`Tooltip Arrow Element applies the top modifier 1`] = `
.c0 {
  border-color: transparent;
  border-style: solid;
  height: 0;
  position: absolute;
  width: 0;
  border-top-width: 0;
  border-right-width: 0.5rem;
  border-bottom-width: 0.5rem;
  border-left-width: 0.5rem;
  border-bottom-color: #191919;
  top: -0.4375rem;
}

<div
  className="c0"
/>
`;
